fix: Fix fetch refactoring type data
